Clean code up.